--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>RSS Virtual Keyboard</title>
 </head>
 <body>
-   <script src="./main.js"></script> 
+   <script src="./src/main.js" type="module"></script> 
 </body>
 </html>
